tests/ui/rfcs/rfc-1445-restrict-constants-in-patterns/issue-61188-match-slice-forbidden-without-eq.stderr
error: to use a constant of type `B` in a pattern, `B` must be annotated with `#[derive(PartialEq)]`
  --> $DIR/issue-61188-match-slice-forbidden-without-eq.rs:15:9
   |
LL |         A => (),
   |         ^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: aborting due to 1 previous error

